refactoring of LineGraph - graphs are based on list of games in GameRegistry